--- a/templates/home.html
+++ b/templates/home.html
@@ -6,23 +6,30 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
 
-                    <!-- Post preview-->
+
+
+    {% for post in post_list %}
                     <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                        <a href="{% url 'PostListView' %}">
+                            <h2 class="post-title">{{post.title}}</h2>
+                            <h3 class="post-subtitle">{{post.short}}</h3>
                         </a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 24, 2022
+                            <a href="#!">{{post.user.first_name}} {{post.user.last_name}}</a>
+                            on {{post.created_at}}
                         </p>
                     </div>
+    {% endfor %}
 
-                    <!-- Divider-->
+
                     <hr class="my-4" />
-                    <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+
+{% if request.path == "/posts/" %}                    
+
+{% else %}
+            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="{% url 'PostListView' %}">All posts</a></div>
+{% endif %}
                 </div>
             </div>
         </div>
