--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
     {% for post in post_list %}
                     <div class="post-preview">
-                        <a href="{% url 'PostListView' %}">
+                        <a href="{% url 'PostDetailView' post.id %}">
                             <h2 class="post-title">{{post.title}}</h2>
                             <h3 class="post-subtitle">{{post.short}}</h3>
                         </a>
@@ -26,7 +26,33 @@
                     <hr class="my-4" />
 
 {% if request.path == "/posts/" %}                    
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+  {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="/posts?page={{ page_obj.previous_page_number }}" tabindex="-1">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="/posts?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    </li>
+    {% endif %}
 
+    <li class="page-item disabled"><a class="page-link" href="">{{ page_obj.number }}</a></li>
+
+    {% if page_obj.has_next %}
+    <li class="page-item"><a class="page-link" href="/posts?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
+    <li class="page-item">
+      <a class="page-link" href="/posts?page={{ page_obj.next_page_number }}">Next</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" href="#">Next</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
 {% else %}
             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="{% url 'PostListView' %}">All posts</a></div>
 {% endif %}
@@ -35,3 +61,5 @@
         </div>
         <!-- Footer-->
      {% endblock %}
+
+
