--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,12 @@
 {% csrf_token %}
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+    {{ form.email }}
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
+    {{ form.password }}
   </div>
 
   <!-- 2 column grid layout for inline styling -->
