--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,34 @@
 
-{% csrf_token %}
+{% extends "base.html" %}
  {%load static%}
-
+ {% block content%}
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="{%static 'css/login.css' %}" rel="stylesheet" />
-<!------ Include the above in your HEAD tag ---------->
+        <article class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
 
-<div class="wrapper fadeInDown">
-  <div id="formContent">
-    <!-- Tabs Titles -->
+                      <div id="formContent" class="fadeIn first">
+                        <!-- Tabs Titles -->
 
 
-    <!-- Login Form -->
-    <form  accept="{% url 'LoginPageView' %}" method="post">
-    {% csrf_token %}
-      <input type="text" id="email" class="fadeIn second" name="email" placeholder="email">
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
-      <input type="submit" class="fadeIn fourth" value="Log In">
-    </form>
+                        <!-- Login Form -->
+                        <form  accept="{% url 'LoginPageView' %}" method="post">
+                        {% csrf_token %}
+                          <input type="text" id="email" class="fadeIn second" name="email" placeholder="email">
+                          <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
+                          <input type="submit" class="fadeIn fourth" value="Log In">
+                        </form>
 
-    <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
-    </div>
+                        <!-- Remind Passowrd -->
+                        <div id="formFooter">
+                          <a class="underlineHover" href="#">Forgot Password?</a>
+                        </div>
 
-  </div>
-</div>
+                      </div>
+                </div>
+            </div>
+        </article>
+     {% endblock %}
